--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,132 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%; /* Set font-size base to 10px */
+}
+
+body {
+  font-size: 1.6rem; /* Set font-size to 16px */
+  font-family: "Quicksand", sans-serif; /* Set font-family */
+  color: #000000;
+  font-weight: 500;
+}
+
+/* Add your other CSS styles below */
+.app {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: auto auto 1fr auto;
+}
+
+h1 {
+  text-align: center;
+  background-color: #77a9de;
+  font-family: "Monoton";
+  font-size: 6.4rem; /* Decrease font-size to 64px */
+  text-transform: uppercase;
+  font-weight: 400;
+  word-spacing: 3rem; /* Decrease word-spacing */
+  letter-spacing: -0.5rem; /* Decrease letter-spacing */
+  padding: 2.4rem 0;
+}
+
+.add-form {
+  background-color: #493f6c;
+  padding: 2.8rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+}
+
+h3 {
+  margin-right: 1.6rem;
+  font-size: 1.6rem; /* Decrease font-size to 16px */
+}
+
+button,
+select,
+input {
+  background-color: #b3b4b5;
+  color: #000000;
+  font-family: inherit;
+  border: none;
+  border-radius: 10rem;
+  padding: 1.2rem 3.2rem;
+  font-weight: 700;
+  font-size: 1.4rem; /* Decrease font-size to 14px */
+  cursor: pointer;
+}
+
+.add-form button {
+  text-transform: uppercase;
+  background-color: #62aec9;
+}
+
+.list {
+  background-color: #b3b4b5;
+  color: #000000;
+  padding: 4rem 0;
+
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 3.2rem;
+  align-items: center;
+}
+
+.actions button,
+.list select {
+  text-transform: uppercase;
+  padding: 0.8rem 2.4rem;
+  font-size: 1.2rem; /* Decrease font-size to 12px */
+  font-weight: 700;
+  margin: 0 0.8rem;
+}
+
+.list ul {
+  list-style: none;
+  width: 80%;
+  /* overflow: scroll; */
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1.2rem;
+  justify-content: center;
+  align-content: start;
+}
+
+.list li {
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+}
+
+input[type="checkbox"] {
+  height: 2rem;
+  width: 2rem;
+  accent-color: #e5771f;
+}
+
+.list li button {
+  cursor: pointer;
+  background: none;
+  border: none;
+  font-size: 1.4rem; /* Decrease font-size to 14px */
+  padding: 0.8rem;
+  transform: translateY(2px);
+}
+
+.stats {
+  background-color: #77a9de;
+  text-align: center;
+  font-weight: 700;
+  padding: 3.2rem 0;
 }
